db connection & bgs

--- a/package.json
+++ b/package.json
@@ -13,18 +13,22 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fontsource-variable/bodoni-moda": "^5.0.15",
+    "@fontsource-variable/montserrat": "^5.0.19",
     "framer-motion": "^11.1.9",
+    "mongodb": "^6.6.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/mongodb": "^4.0.7",
+    "@types/node": "^20.12.12",
+    "@types/react": "^18.3.2",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
-    "typescript": "^5"
+    "typescript": "^5.4.5"
   }
 }
